fix: overflow title interactive (#127)

--- a/src/components/Interactive/Interactive.scss
+++ b/src/components/Interactive/Interactive.scss
@@ -77,6 +77,7 @@ $block: '.#{variables.$ns}interactive';
 
     &__title-slider {
         height: 198px;
+        overflow: visible;
 
         span {
             font-size: 64px;
@@ -87,6 +88,7 @@ $block: '.#{variables.$ns}interactive';
 
         .swiper-slide {
             transition: all 1.2s ease;
+            opacity: 0;
         }
 
         .swiper-slide-next {
